--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -13,18 +13,40 @@ body {
 
 .alphabet-item {
     height: 30px;
-    border-radius: 5px;
+    border-radius: 4px;
     border: 1px solid grey;
     cursor: pointer;
-    margin: 2px;
+    margin: 1px;
     float: left;
-    padding: 3px;
+    padding: 2px;
+    font-size: calc(7px + .5vw);
 }
 
 .alphabet .noentries {
     background-color: rgb(250, 250, 250);
     color: darkgray;
     cursor: default;
+    font-size: calc(6px + .5vw);
+}
+
+@media screen and (min-width: 1000px) {
+    .alphabet-item {
+        height: 30px;
+        border-radius: 5px;
+        border: 1px solid grey;
+        cursor: pointer;
+        margin: 2px;
+        float: left;
+        padding: 3px;
+        font-size: 1rem;
+    }
+
+    .alphabet .noentries {
+        background-color: rgb(250, 250, 250);
+        color: darkgray;
+        cursor: default;
+        font-size: 1rem;
+    }
 }
 
 .alphabet-item-active {
