--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -9,44 +9,28 @@ body {
 .alphabet {
     margin: 0 auto;
     margin-bottom: 20px;
+    height: 50px;
+    display: flex;
+    overflow-y: auto;
+    align-items: baseline;
 }
 
 .alphabet-item {
     height: 30px;
-    border-radius: 4px;
+    border-radius: 5px;
     border: 1px solid grey;
     cursor: pointer;
-    margin: 1px;
+    margin: 2px;
     float: left;
-    padding: 2px;
-    font-size: calc(7px + .5vw);
+    padding: 3px;
+    font-size: 1rem;
 }
 
 .alphabet .noentries {
     background-color: rgb(250, 250, 250);
     color: darkgray;
     cursor: default;
-    font-size: calc(6px + .5vw);
-}
-
-@media screen and (min-width: 1000px) {
-    .alphabet-item {
-        height: 30px;
-        border-radius: 5px;
-        border: 1px solid grey;
-        cursor: pointer;
-        margin: 2px;
-        float: left;
-        padding: 3px;
-        font-size: 1rem;
-    }
-
-    .alphabet .noentries {
-        background-color: rgb(250, 250, 250);
-        color: darkgray;
-        cursor: default;
-        font-size: 1rem;
-    }
+    font-size: 1rem;
 }
 
 .alphabet-item-active {
