--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -95,7 +95,9 @@ body {
 
 .recipe .pictureList img {
     margin-top: 10px;
-    margin-right: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border: 1px inset #ddd;
     padding: 5px;
     background-color: silver;
