--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -93,9 +93,11 @@ body {
     border-bottom: 1px dashed silver;
 }
 
+.recipe .pictureList {
+    display: flex;
+}
 .recipe .pictureList img {
     margin-top: 10px;
-    display: block;
     margin-left: auto;
     margin-right: auto;
     border: 1px inset #ddd;
