--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -62,6 +62,7 @@ body {
     font-size: 60%;
     font-style: italic;
     color: gray;
+    line-height: 40px;
 }
 
 #recipesListContainer, #recipeNewContainer {
