--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -173,16 +173,21 @@ body {
     color: grey;
 }
 
+.recipe-header {
+    display: flex;
+}
+
 .recipe-title {
-    max-width: 70%;
     overflow: auto;
     text-align: left;
 }
 
 .recipe-controls {
-    max-width: 220px;
     float: right;
-    display: contents;
+    max-width: 230px;
+    min-width: 105px;
+    height: 35px;
+    white-space: nowrap;
 }
 
 .recipe-link,
