--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -139,6 +139,13 @@ body {
     padding: 0px;
     padding-left: 3px;
     margin-bottom: 10px;
+    width: -webkit-fill-available;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .recipe-update-description {
