--- a/public/css/rezepte.css
+++ b/public/css/rezepte.css
@@ -54,7 +54,7 @@ body {
 /* recipe list */
 
 .card-header {
-    height: 35px; 
+    height: 35px;
     padding: 0px;
 }
 
@@ -66,7 +66,8 @@ body {
     margin-right: 10px;
 }
 
-#recipesListContainer, #recipeNewContainer {
+#recipesListContainer,
+#recipeNewContainer {
     padding: 0px;
 }
 
@@ -75,24 +76,25 @@ body {
     margin-right: auto;
     margin-bottom: 5px;
 }
+
 .recipe-description-container,
-.recipe-content-container, 
+.recipe-content-container,
 .recipe-pictures-container,
-.recipe-title-container, 
-.recipe-description-container, 
+.recipe-title-container,
+.recipe-description-container,
 .recipe-content-container,
 .recipe-tags-container,
 .recipe-pictures-container {
     margin-bottom: 30px;
 }
 
-.recipe-description-container h6, 
-.recipe-content-container h6, 
-.recipe-pictures-container h6,
-.recipe-title-container h6, 
-.recipe-description-container h6, 
+.recipe-description-container h6,
 .recipe-content-container h6,
-.recipe-tags-container h6, 
+.recipe-pictures-container h6,
+.recipe-title-container h6,
+.recipe-description-container h6,
+.recipe-content-container h6,
+.recipe-tags-container h6,
 .recipe-pictures-container h6 {
     border-bottom: 1px dashed silver;
 }
@@ -100,6 +102,7 @@ body {
 .recipe .pictureList {
     text-align: center;
 }
+
 .recipe .pictureList img {
     margin-top: 10px;
     margin-right: 10px;
@@ -107,6 +110,7 @@ body {
     padding: 5px;
     background-color: silver;
 }
+
 .recipe .pictureList .pictureUpdate {
     width: fit-content;
 }
@@ -116,28 +120,28 @@ body {
 }
 
 #recipe-new-title {
-    height: 25px; 
+    height: 25px;
     padding: 0px;
     padding-left: 3px;
     margin-bottom: 10px;
 }
 
 #recipe-new-description {
-    height: 150px; 
+    height: 150px;
     padding: 0px;
     padding-left: 3px;
     margin-bottom: 10px;
 }
 
 #recipe-new-content {
-    height: 150px; 
+    height: 150px;
     padding: 0px;
     padding-left: 3px;
     margin-bottom: 10px;
 }
 
 .recipe-update-title {
-    height: 25px; 
+    height: 25px;
     padding: 0px;
     padding-left: 3px;
     margin-bottom: 10px;
@@ -147,18 +151,18 @@ body {
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .recipe-update-description {
-    height: 150px; 
+    height: 150px;
     padding: 0px;
     padding-left: 3px;
     margin-bottom: 10px;
 }
 
 .recipe-update-content {
-    height: 150px; 
+    height: 150px;
     padding: 0px;
     padding-left: 3px;
     margin-bottom: 10px;
@@ -176,7 +180,8 @@ body {
     margin-bottom: 30px;
 }
 
-#pictureRotate, #pictureDestroy {
+#pictureRotate,
+#pictureDestroy {
     margin-left: 5px;
     border: none;
     color: grey;
@@ -219,11 +224,16 @@ body {
     align-items: baseline;
 }
 
+.tagsHeadList {
+    float: left;
+}
+
 .tag-list-item {
     border-radius: 5px;
     border: 1px solid grey;
     cursor: pointer;
     margin-right: 5px;
+    margin-left: 5px;
     float: left;
     padding: 3px;
     color: #495057;
@@ -235,4 +245,23 @@ body {
 .tag-list-item.active {
     background-color: rgb(101, 150, 255);
     color: white;
+}
+
+.tag-delete-item {
+    display: block;
+    width: 20px;
+    height: 20px;
+}
+
+.tag-new {
+    border-radius: 5px;
+    border: 1px solid grey;
+    margin-top: 0px;
+    padding: 3px;
+    color: #495057;
+    background-color: rgb(250, 250, 250);
+    font-size: small;
+    font-style: oblique;
+    width: 180px;
+    float: right;
 }
